# jobpilot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHAOS_TEST.md  CONTRIBUTING.md  FINAL_DELIVERY.md  FINAL_STATUS.md  LICENSE  Makefile  POLISH_ROUND3.md  POLISH_ROUND4.md  PROJECT_STATUS.md  README.md  SECURITY.md  TEST_REPORT.md  docker-compose.yml  nginx.conf  push-to-github.sh
backend/: pyproject.toml
backend/common/: api_version.py  auth.py  cache.py  config.py  cors.py  db.py  es.py  exceptions.py  factories.py  health.py  idempotency.py  logging.py  metrics.py  milvus.py  neo4j.py  pagination.py  rate_limit.py  redis.py  resilience.py  sensitive.py  shutdown.py  task_manager.py  tracing.py
backend/services/agent_service/: Dockerfile  analytics.py  event_middleware.py  main.py  models.py  requirements.txt  retraining.py  schemas.py  service.py  worker.py
backend/services/apply_service/: form_filler.py  main.py  models.py  requirements.txt  schemas.py  service.py
backend/services/interview_service/: analyzer.py  interviewer.py  livekit.py  main.py  models.py  question_bank.py  requirements.txt  schemas.py  service.py  transcriber.py
backend/services/match_service/: career.py  comparator.py  main.py  matcher.py  models.py  requirements.txt  salary.py  schemas.py  search.py  service.py
backend/services/resume_service/: generator.py  importers.py  main.py  models.py  parser.py  requirements.txt  schemas.py  scorer.py  service.py
backend/services/user_service/: API_EXAMPLES.md  Dockerfile  alembic.ini  main.py  models.py  requirements.txt  (+2 more)
(+103 files in other folders)
